--- a/package.json
+++ b/package.json
@@ -16,5 +16,6 @@
   "devDependencies": {
     "prettier": "3.6.2",
     "prettier-plugin-astro": "0.14.1"
-  }
+  },
+  "packageManager": "pnpm@9"
 }
